# DjangoNetbox

./: Dockerfile  README.MD  manage.py  pyproject.toml
docker_compose/: storages.yaml
docker_compose/dev/: compose_dev.yaml
src/: manage.py
src/infra/exceptions/: repo_exceptions.py
src/infra/permissions/: permissions.py
src/infra/repos/: base.py
src/infra/repos/devices/: devices_repos.py
src/infra/repos/users/: users_repo.py
src/infra/serializers/devices/: serializers.py
src/infra/serializers/users/: serializers.py
src/infra/servers/: asgi.py
src/infra/services/: base.py
src/infra/services/devices/: device_service.py
src/infra/services/users/: user_service.py
src/infra/settings/: settings.py
src/presentation/api/: urls.py
src/presentation/api/devices/: urls.py  views.py
src/presentation/api/users/: urls.py  views.py
src/presentation/apps/device_app/: admin.py  apps.py  forms.py  models.py
src/presentation/apps/device_app/migrations/: 0001_initial.py
src/presentation/static/: dadata_autocomplete.js
src/tests/infrastructure/: repos.py  services.py
